testsuite/tests/lkt/semantic/callexpr/invalid/test.out
Resolving test.lkt
==================
Decl <FunDecl "f1" test.lkt:1:1-1:18>
     has_type <FunctionType "() -> Int" test.lkt>

   Id   <RefId "Int" test.lkt:1:11-1:14>
        has_type None
        references <StructDecl prelude: "Int">

   Expr <NumLit test.lkt:1:17-1:18>
        has_type <StructDecl prelude: "Int">

Decl <FunDecl "f2" test.lkt:2:1-2:28>
     has_type <FunctionType "(Int) -> Int" test.lkt>

   Decl <FunParamDecl "i" test.lkt:2:8-2:14>
        has_type <StructDecl prelude: "Int">

      Id   <RefId "Int" test.lkt:2:11-2:14>
           has_type None
           references <StructDecl prelude: "Int">

   Id   <RefId "Int" test.lkt:2:17-2:20>
        has_type None
        references <StructDecl prelude: "Int">

   Expr <BinOp test.lkt:2:23-2:28>
        has_type <StructDecl prelude: "Int">

      Id   <RefId "i" test.lkt:2:23-2:24>
           has_type <StructDecl prelude: "Int">
           references <FunParamDecl "i" test.lkt:2:8-2:14>

      Expr <NumLit test.lkt:2:27-2:28>
           has_type <StructDecl prelude: "Int">

Decl <FunDecl "f3" test.lkt:3:1-3:48>
     has_type <FunctionType "(Int, Int, Int) -> Int" test.lkt>

   Decl <FunParamDecl "i" test.lkt:3:8-3:14>
        has_type <StructDecl prelude: "Int">

      Id   <RefId "Int" test.lkt:3:11-3:14>
           has_type None
           references <StructDecl prelude: "Int">

   Decl <FunParamDecl "j" test.lkt:3:16-3:22>
        has_type <StructDecl prelude: "Int">

      Id   <RefId "Int" test.lkt:3:19-3:22>
           has_type None
           references <StructDecl prelude: "Int">

   Decl <FunParamDecl "k" test.lkt:3:24-3:30>
        has_type <StructDecl prelude: "Int">

      Id   <RefId "Int" test.lkt:3:27-3:30>
           has_type None
           references <StructDecl prelude: "Int">

   Id   <RefId "Int" test.lkt:3:33-3:36>
        has_type None
        references <StructDecl prelude: "Int">

   Expr <BinOp test.lkt:3:39-3:48>
        has_type <StructDecl prelude: "Int">

      Expr <BinOp test.lkt:3:39-3:44>
           has_type <StructDecl prelude: "Int">

         Id   <RefId "i" test.lkt:3:39-3:40>
              has_type <StructDecl prelude: "Int">
              references <FunParamDecl "i" test.lkt:3:8-3:14>

         Id   <RefId "j" test.lkt:3:43-3:44>
              has_type <StructDecl prelude: "Int">
              references <FunParamDecl "j" test.lkt:3:16-3:22>

      Id   <RefId "k" test.lkt:3:47-3:48>
           has_type <StructDecl prelude: "Int">
           references <FunParamDecl "k" test.lkt:3:24-3:30>

Id   <RefId "Node" test.lkt:5:13-5:17>
     has_type None
     references <TraitDecl prelude: "Node[T]">

Id   <RefId "Foo" test.lkt:5:18-5:21>
     has_type None
     references <ClassDecl "Foo" test.lkt:5:1-7:2>

Decl <FunDecl "f4" test.lkt:6:5-6:24>
     has_type <FunctionType "(Int) -> Int" test.lkt>

   Decl <FunParamDecl "i" test.lkt:6:12-6:18>
        has_type <StructDecl prelude: "Int">

      Id   <RefId "Int" test.lkt:6:15-6:18>
           has_type None
           references <StructDecl prelude: "Int">

   Id   <RefId "Int" test.lkt:6:21-6:24>
        has_type None
        references <StructDecl prelude: "Int">

Decl <ValDecl "not_callable" test.lkt:9:1-9:21>
     has_type <StructDecl prelude: "Int">

   Expr <NumLit test.lkt:9:20-9:21>
        has_type <StructDecl prelude: "Int">

<ValDecl "invalid1" test.lkt:11:1-11:21> failed nameres:
test.lkt:11:16-11:21: error: invalid call, expected () -> Int
 11 | val invalid1 = f1(1)
    |                ^^^^^ 

Decl <ValDecl "invalid1" test.lkt:11:1-11:21>
     has_type None

   Expr <CallExpr test.lkt:11:16-11:21>
        has_type None

      Id   <RefId "f1" test.lkt:11:16-11:18>
           has_type None
           references None

      Expr <NumLit test.lkt:11:19-11:20>
           has_type <StructDecl prelude: "Int">

<ValDecl "invalid2" test.lkt:12:1-12:22> failed nameres:
test.lkt:12:19-12:21: error: expected Int, got String
 12 | val invalid2 = f2("")
    |                   ^^ 

Decl <ValDecl "invalid2" test.lkt:12:1-12:22>
     has_type None

   Expr <CallExpr test.lkt:12:16-12:22>
        has_type None

      Id   <RefId "f2" test.lkt:12:16-12:18>
           has_type None
           references None

      Expr <SingleLineStringLit test.lkt:12:19-12:21>
           has_type <StructDecl prelude: "String">

<ValDecl "invalid3" test.lkt:13:1-13:24> failed nameres:
test.lkt:13:16-13:24: error: invalid call, expected (Int, Int, Int) -> Int
 13 | val invalid3 = f3(1, 2)
    |                ^^^^^^^^ 

Decl <ValDecl "invalid3" test.lkt:13:1-13:24>
     has_type None

   Expr <CallExpr test.lkt:13:16-13:24>
        has_type None

      Id   <RefId "f3" test.lkt:13:16-13:18>
           has_type None
           references None

      Expr <NumLit test.lkt:13:19-13:20>
           has_type <StructDecl prelude: "Int">

      Expr <NumLit test.lkt:13:22-13:23>
           has_type <StructDecl prelude: "Int">

<ValDecl "invalid4" test.lkt:14:1-14:30> failed nameres:
test.lkt:14:16-14:28: error: Int is not callable
 14 | val invalid4 = not_callable()
    |                ^^^^^^^^^^^^ 

test.lkt:14:5-14:13: error: could not determine type
 14 | val invalid4 = not_callable()
    |     ^^^^^^^^ 

Decl <ValDecl "invalid4" test.lkt:14:1-14:30>
     has_type None

   Expr <CallExpr test.lkt:14:16-14:30>
        has_type None

      Id   <RefId "not_callable" test.lkt:14:16-14:28>
           has_type None
           references None

<ValDecl "named1" test.lkt:16:1-16:21> failed nameres:
test.lkt:16:17-16:18: error: extraneous parameter for f1
 16 | val named1 = f1(i=1)
    |                 ^ 

Decl <ValDecl "named1" test.lkt:16:1-16:21>
     has_type None

   Expr <CallExpr test.lkt:16:14-16:21>
        has_type None

      Id   <RefId "f1" test.lkt:16:14-16:16>
           has_type None
           references None

      Id   <RefId "i" test.lkt:16:17-16:18>
           has_type None
           references None

      Expr <NumLit test.lkt:16:19-16:20>
           has_type <StructDecl prelude: "Int">

<ValDecl "named2" test.lkt:17:1-17:24> failed nameres:
test.lkt:17:20-17:21: error: extraneous parameter for f2
 17 | val named2 = f2(1, i=1)
    |                    ^ 

Decl <ValDecl "named2" test.lkt:17:1-17:24>
     has_type None

   Expr <CallExpr test.lkt:17:14-17:24>
        has_type None

      Id   <RefId "f2" test.lkt:17:14-17:16>
           has_type None
           references None

      Expr <NumLit test.lkt:17:17-17:18>
           has_type <StructDecl prelude: "Int">

      Id   <RefId "i" test.lkt:17:20-17:21>
           has_type None
           references None

      Expr <NumLit test.lkt:17:22-17:23>
           has_type <StructDecl prelude: "Int">

<ValDecl "named3" test.lkt:18:1-18:28> failed nameres:
test.lkt:18:25-18:27: error: expected Int, got String
 18 | val named3 = f3(1, 2, k="")
    |                         ^^ 

Decl <ValDecl "named3" test.lkt:18:1-18:28>
     has_type None

   Expr <CallExpr test.lkt:18:14-18:28>
        has_type None

      Id   <RefId "f3" test.lkt:18:14-18:16>
           has_type None
           references None

      Expr <NumLit test.lkt:18:17-18:18>
           has_type <StructDecl prelude: "Int">

      Expr <NumLit test.lkt:18:20-18:21>
           has_type <StructDecl prelude: "Int">

      Id   <RefId "k" test.lkt:18:23-18:24>
           has_type None
           references None

      Expr <SingleLineStringLit test.lkt:18:25-18:27>
           has_type <StructDecl prelude: "String">

<ValDecl "named4" test.lkt:19:1-19:30> failed nameres:
test.lkt:19:24-19:25: error: extraneous parameter for f4
 19 | val named4 = Foo.f4(1, j = 2)
    |                        ^ 

Decl <ValDecl "named4" test.lkt:19:1-19:30>
     has_type None

   Expr <CallExpr test.lkt:19:14-19:30>
        has_type None

      Expr <DotExpr test.lkt:19:14-19:20>
           has_type None

         Id   <RefId "Foo" test.lkt:19:14-19:17>
              has_type None
              references <ClassDecl "Foo" test.lkt:5:1-7:2>

         Id   <RefId "f4" test.lkt:19:18-19:20>
              has_type None
              references None

      Expr <NumLit test.lkt:19:21-19:22>
           has_type <StructDecl prelude: "Int">

      Id   <RefId "j" test.lkt:19:24-19:25>
           has_type None
           references None

      Expr <NumLit test.lkt:19:28-19:29>
           has_type <StructDecl prelude: "Int">

<ValDecl "unmatched" test.lkt:21:1-21:40> failed nameres:
test.lkt:21:34-21:35: error: unmatched argument
 21 | val unmatched = ((i, j) => i)(1, k = 2)
    |                                  ^ 

Decl <ValDecl "unmatched" test.lkt:21:1-21:40>
     has_type None

   Expr <CallExpr test.lkt:21:17-21:40>
        has_type None

      Expr <ParenExpr test.lkt:21:17-21:30>
           has_type <FunctionType prelude: "(Int, Int) -> Int">

         Expr <LambdaExpr test.lkt:21:18-21:29>
              has_type None

            Decl <LambdaParamDecl "i" test.lkt:21:19-21:20>
                 has_type <StructDecl prelude: "Int">

            Decl <LambdaParamDecl "j" test.lkt:21:22-21:23>
                 has_type <StructDecl prelude: "Int">

            Id   <RefId "i" test.lkt:21:28-21:29>
                 has_type <StructDecl prelude: "Int">
                 references <LambdaParamDecl "i" test.lkt:21:19-21:20>

      Expr <NumLit test.lkt:21:31-21:32>
           has_type <StructDecl prelude: "Int">

      Id   <RefId "k" test.lkt:21:34-21:35>
           has_type None
           references None

      Expr <NumLit test.lkt:21:38-21:39>
           has_type <StructDecl prelude: "Int">

<ValDecl "_" test.lkt:23:1-23:24> failed nameres:
test.lkt:23:9-23:14: error: undefined entity
 23 | val _ = undef(a=1, b=2)
    |         ^^^^^ 

test.lkt:23:5-23:6: error: could not determine type
 23 | val _ = undef(a=1, b=2)
    |     ^ 

Decl <ValDecl "_" test.lkt:23:1-23:24>
     has_type None

   Expr <CallExpr test.lkt:23:9-23:24>
        has_type None

      Id   <RefId "undef" test.lkt:23:9-23:14>
           has_type None
           references None

      Id   <RefId "a" test.lkt:23:15-23:16>
           has_type None
           references None

      Expr <NumLit test.lkt:23:17-23:18>
           has_type <StructDecl prelude: "Int">

      Id   <RefId "b" test.lkt:23:20-23:21>
           has_type None
           references None

      Expr <NumLit test.lkt:23:22-23:23>
           has_type <StructDecl prelude: "Int">

